--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebApp Dashboard</title>
+    <title>AmaDeus - WebApp Dashboard</title>
 </head>
 <body>
-    
+    <header>
+        <h1>AmaDeus</h1>
+        <img src="./icons/icon-bell.svg" alt="notification Bell">
+        <img src="./images/0.jpg" alt="profile image">
+        <p>Tashan Duncan</p>
+    </header>
+    <nav>
+        <img src="./icons/icon-dashboard.svg" alt="dashboard navigation icon">
+        <img src="./icons/icon-members.svg" alt="members navigation icon">
+        <img src="./icons/icon-visits.svg" alt="visits navigation icon">
+        <img src="./icons/icon-settings.svg" alt="icon-settings navigation icon">
+    </nav>
+    <main>
+
+    </main>
 </body>
 </html>
