link css to html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmaDeus - WebApp Dashboard</title>
+    <link href="./css/normalize.css" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>AmaDeus</h1>
         <img src="./icons/icon-bell.svg" alt="notification Bell">
         <img src="./images/0.jpg" alt="profile image">
-        <p>Tashan Duncan</p>
+        <span>Tashan Duncan</span>
     </header>
     <nav>
         <img src="./icons/icon-dashboard.svg" alt="dashboard navigation icon">
