--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="./css/styles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="grid-container">
     <header>
-        <h1>AmaDeus</h1>
+        <h1>AmaDeus&trade;</h1>
         <div>
             <img src="./icons/icon-bell.svg" alt="notification Bell">
             <div id="notifications">   
@@ -71,12 +71,12 @@
         </section>
 
         <!-- doughnut graph -->
-        <section class="daily">
+        <section class="mobile">
             <h3>Mobile users</h3>
 
         <div class="widget-container-half">
             <!-- element bar graph will attach to -->
-            <canvas id="daily-chart"></canvas>
+            <canvas id="mobile-chart"></canvas>
         </div>
         </section>
 
