styling of header before installing sass

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 </head>
 <body class="grid-container">
     <header>
-        <h1>AmaDeus&trade;</h1>
+        <h1>Ama<span>Deus&trade;</span></h1>
         <div>
-            <img src="./icons/icon-bell.svg" alt="notification Bell">
-            <div id="notifications">   
-
-            </div>
+            <img src="./icons/icon-bell.svg" alt="notification Bell" height="50" width="50">
+            <div id="notifications"></div>
         </div>
-        <img src="./images/0.jpg" alt="profile image">
+        <img src="./images/0.jpg" alt="profile image" height="50" width="50">
         <h3>Tashan Duncan</h3>
     </header>
     <nav>
