config on sass file

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </header>
     <nav>
         <!--Dashboard SVG-->
-        <a href="#"><img src="./icons/icon-dashboard.svg"></a>
+        <a href="#"><img src="./icons/icon-dashboard.svg" height="50" width="50"></a>
 
         <!--Members SVG-->
-        <a href="#"><img src="./icons/icon-members.svg"></a>
+        <a href="#"><img src="./icons/icon-members.svg" height="50" width="50"></a>
 
         <!--visits SVG-->
-        <a href="#"><img src="./icons/icon-visits.svg"></a>
+        <a href="#"><img src="./icons/icon-visits.svg" height="50" width="50"></a>
 
         <!--Settings SVG-->
-        <a href="#"><img src="./icons/icon-settings.svg"></a>
+        <a href="#"><img src="./icons/icon-settings.svg" height="50" width="50"></a>
     </nav>
     <main>
         <div class="main-header">
@@ -127,7 +127,7 @@
             </div>
 
             <div class="members-container">
-                <img src="images/member-1.jpg"   class="profile-image">
+                <img src="images/member-2.jpg"   class="profile-image">
                 <div class="members-text">
                     <p>Victoria Chambers</p>
                     <a href="#">victoria.chambers80@example.com</a>
@@ -136,7 +136,7 @@
             </div>
 
             <div class="members-container">
-                <img src="images/member-1.jpg"   class="profile-image">
+                <img src="images/member-3.jpg"   class="profile-image">
                 <div class="members-text">
                     <p>Victoria Chambers</p>
                     <a href="#">victoria.chambers80@example.com</a>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="members-container">
-                <img src="images/member-1.jpg"   class="profile-image">
+                <img src="images/member-4.jpg"   class="profile-image">
                 <div class="members-text">
                     <p>Victoria Chambers</p>
                     <a href="#">victoria.chambers80@example.com</a>
@@ -166,7 +166,7 @@
             </div>
 
             <div class="activity-container">
-                <img src="images/member-1.jpg"   class="profile-image">
+                <img src="images/member-2.jpg"   class="profile-image">
                 <div class="activity-text">
                     <p>Victoria Chambers commented on such and such</p>
                 </div>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="activity-container">
-                <img src="images/member-1.jpg"   class="profile-image">
+                <img src="images/member-3.jpg"   class="profile-image">
                 <div class="activity-text">
                     <p>Victoria Chambers commented on such and such</p>
                 </div>
@@ -182,7 +182,7 @@
             </div>
 
             <div class="activity-container">
-                <img src="images/member-1.jpg"   class="profile-image">
+                <img src="images/member-4.jpg"   class="profile-image">
                 <div class="activity-text">
                     <p>Victoria Chambers commented on such and such</p>
                 </div>
