--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <section class="social">
             <div class="social-header">
-                <h3>Traffic</h3>
+                <h3>Social Stats</h3>
             </div>
             <div class="social-content">
                 <div class="social-container">
@@ -125,7 +125,7 @@
                     </div>
                     <div class="social-text">
                         <p class="social-name">FaceBook</p>
-                        <p class="social-number">10,345</p>
+                        <p class="social-number">8,739</p>
                     </div>
                 </div>
                 <div class="social-container">
@@ -152,7 +152,7 @@
                     </div>
                     <div class="social-text">
                         <p class="social-name">Google+</p>
-                        <p class="social-number">10,345</p>
+                        <p class="social-number">2,530</p>
                     </div>
                 </div>
             </div>
