--- a/index.html
+++ b/index.html
@@ -162,41 +162,42 @@
         <!-- new members widget -->
         <section class="members">
             <h3>New Members</h3>
-
-            <div class="members-container">
-                <img src="images/member-1.jpg"   class="profile-image">
-                <div class="members-text">
-                    <p>Victoria Chambers</p>
-                    <a href="#">victoria.chambers80@example.com</a>
+            <div class="members-all">
+                <div class="members-container">
+                    <img src="images/member-1.jpg"   class="profile-image">
+                    <div class="members-text">
+                        <p>Victoria Chambers</p>
+                        <a href="#">victoria.chambers80@example.com</a>
+                    </div>
+                    <p class="members-date">10/15/15</p>
                 </div>
-                <p>10/15/15</p>
-            </div>
 
-            <div class="members-container">
-                <img src="images/member-2.jpg"   class="profile-image">
-                <div class="members-text">
-                    <p>Victoria Chambers</p>
-                    <a href="#">victoria.chambers80@example.com</a>
+                <div class="members-container">
+                    <img src="images/member-2.jpg"   class="profile-image">
+                    <div class="members-text">
+                        <p>Dale Byrd</p>
+                        <a href="#">dale.byrd520@example.com</a>
+                    </div>
+                    <p class="members-date">10/15/15</p>
                 </div>
-                <p>10/15/15</p>
-            </div>
 
-            <div class="members-container">
-                <img src="images/member-3.jpg"   class="profile-image">
-                <div class="members-text">
-                    <p>Victoria Chambers</p>
-                    <a href="#">victoria.chambers80@example.com</a>
+                <div class="members-container">
+                    <img src="images/member-3.jpg"   class="profile-image">
+                    <div class="members-text">
+                        <p>Dawn Wood</p>
+                        <a href="#">dawn.wood16@example.com</a>
+                    </div>
+                    <p class="members-date">10/15/15</p>
                 </div>
-                <p>10/15/15</p>
-            </div>
 
-            <div class="members-container">
-                <img src="images/member-4.jpg"   class="profile-image">
-                <div class="members-text">
-                    <p>Victoria Chambers</p>
-                    <a href="#">victoria.chambers80@example.com</a>
+                <div class="members-container">
+                    <img src="images/member-4.jpg"   class="profile-image">
+                    <div class="members-text">
+                        <p>Dan Oliver</p>
+                        <a href="#">dan.oliver82@example.com</a>
+                    </div>
+                    <p class="members-date">10/15/15</p>
                 </div>
-                <p>10/15/15</p>
             </div>
         </section>
 
