complete members and activity components

--- a/index.html
+++ b/index.html
@@ -207,33 +207,37 @@
             <div class="activity-container">
                 <img src="images/member-1.jpg"   class="profile-image">
                 <div class="activity-text">
-                    <p>Victoria Chambers commented on such and such</p>
+                    <p>Victoria Chambers commented on AmaDeus' SEO Tips</p>
+                    <p>4 hours ago</p>
                 </div>
-                <p>1 day ago</p>
+                <span class="arrow">></span>
             </div>
 
             <div class="activity-container">
                 <img src="images/member-2.jpg"   class="profile-image">
                 <div class="activity-text">
-                    <p>Victoria Chambers commented on such and such</p>
+                    <p>Dale Byrd liked the post on such and such</p>
+                    <p>1 day ago</p>
                 </div>
-                <p>1 day ago</p>
+                <span class="arrow">></span>
             </div>
 
             <div class="activity-container">
                 <img src="images/member-3.jpg"   class="profile-image">
                 <div class="activity-text">
                     <p>Victoria Chambers commented on such and such</p>
+                    <p>1 day ago</p>
                 </div>
-                <p>1 day ago</p>
+                <span class="arrow">></span>
             </div>
 
             <div class="activity-container">
                 <img src="images/member-4.jpg"   class="profile-image">
                 <div class="activity-text">
                     <p>Victoria Chambers commented on such and such</p>
+                    <p>1 day ago</p>
                 </div>
-                <p>1 day ago</p>
+                <span class="arrow">></span>
             </div>
         </section>
     
