improve member and activity section

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <p>Victoria Chambers</p>
                         <a href="#">victoria.chambers80@example.com</a>
                     </div>
-                    <p class="members-date">10/15/15</p>
+                    <p class="members-date">06/12/20</p>
                 </div>
 
                 <div class="members-container">
@@ -178,7 +178,7 @@
                         <p>Dale Byrd</p>
                         <a href="#">dale.byrd520@example.com</a>
                     </div>
-                    <p class="members-date">10/15/15</p>
+                    <p class="members-date">06/12/20</p>
                 </div>
 
                 <div class="members-container">
@@ -187,7 +187,7 @@
                         <p>Dawn Wood</p>
                         <a href="#">dawn.wood16@example.com</a>
                     </div>
-                    <p class="members-date">10/15/15</p>
+                    <p class="members-date">06/12/20</p>
                 </div>
 
                 <div class="members-container">
@@ -196,7 +196,7 @@
                         <p>Dan Oliver</p>
                         <a href="#">dan.oliver82@example.com</a>
                     </div>
-                    <p class="members-date">10/15/15</p>
+                    <p class="members-date">06/12/20</p>
                 </div>
             </div>
         </section>
@@ -207,7 +207,7 @@
             <div class="activity-container">
                 <img src="images/member-1.jpg"   class="profile-image">
                 <div class="activity-text">
-                    <p>Victoria Chambers commented on AmaDeus' SEO Tips</p>
+                    <p>Victoria Chambers commented on <a href="#" class="activity-link">AmaDeus' SEO Tips</a></p>
                     <p>4 hours ago</p>
                 </div>
                 <span class="arrow">></span>
@@ -216,8 +216,8 @@
             <div class="activity-container">
                 <img src="images/member-2.jpg"   class="profile-image">
                 <div class="activity-text">
-                    <p>Dale Byrd liked the post on such and such</p>
-                    <p>1 day ago</p>
+                    <p>Dale Byrd liked the post<a href="#" class="activity-link">FaceBook's Changes for 2021</a></p>
+                    <p>5 hours ago</p>
                 </div>
                 <span class="arrow">></span>
             </div>
@@ -225,8 +225,8 @@
             <div class="activity-container">
                 <img src="images/member-3.jpg"   class="profile-image">
                 <div class="activity-text">
-                    <p>Victoria Chambers commented on such and such</p>
-                    <p>1 day ago</p>
+                    <p>Dawn Wood commented on the post <a href="#" class="activity-link">FaceBook's Changes for 2021</a></p>
+                    <p>5 hours ago</p>
                 </div>
                 <span class="arrow">></span>
             </div>
@@ -234,7 +234,7 @@
             <div class="activity-container">
                 <img src="images/member-4.jpg"   class="profile-image">
                 <div class="activity-text">
-                    <p>Victoria Chambers commented on such and such</p>
+                    <p>Dan Oliver posted <a href="#" class="activity-link">AmaDeus' SEO Tips</a></p>
                     <p>1 day ago</p>
                 </div>
                 <span class="arrow">></span>
