add alert notifications

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
         </div>
         <!-- alert banner -->
         <div class="alert" id="alert"><!-- JS will insert alert here --></div>
+        <div class="alert-tasks" id="tasks">
+            <div class=alert-tasks-close id="close-tasks">x</div>
+            <a href="#">Task 1</a>
+            <a href="#">Task 2</a>
+            <a href="#">Task 3</a>
+            </div>
+
 
         <!-- line graph charts -->
         <section class="traffic">
