--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
             <div class="traffic-header">
                 <h3>Traffic</h3>
                 <ul class="traffic-nav">
-                    <li class="traffic-nav-link">Hourly</li>
-                    <li class="traffic-nav-link">Daily</li>
-                    <li class="traffic-nav-link active">Weekly</li>
-                    <li class="traffic-nav-link">Monthly</li>
+                    <li class="traffic-nav-link" onclick="hourlyUpdate()">Hourly</li>
+                    <li class="traffic-nav-link" onclick="dailyUpdate()">Daily</li>
+                    <li class="traffic-nav-link active" onclick="weeklyUpdate()">Weekly</li>
+                    <li class="traffic-nav-link" onclick="monthlyUpdate()">Monthly</li>
                 </ul>
             </div>
             <div class="widget-container-full">
