configure local storage

--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
                 <div class="widget-toggle">
                     <p>Send Email Notifications</p>
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" id='email-notifications'>
                         <span class="slider round"></span>
                     </label>
                 </div>
                 <div class="widget-toggle">
                     <p>Set Profile to Public</p>
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" id='public'>
                         <span class="slider round"></span>
                     </label>
                 </div>
