--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="user">
             <div class="notification-bell">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
                     <g id="_x36__6_">
                         <g>
@@ -118,7 +118,7 @@
             <div class="social-content">
                 <div class="social-container">
                     <div class="social-image">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
                         <path fill="white" d="M32,3.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6C25.8,0.8,24,0,22.2,0
                             c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5C10.3,7.8,5.5,5.2,2.2,1.2c-0.6,1-0.9,2.1-0.9,3.3c0,2.3,1.2,4.3,2.9,5.5
@@ -135,7 +135,7 @@
                 </div>
                 <div class="social-container">
                     <div class="social-image">
-                        <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="white" d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg>
+                        <svg enable-background="new 0 0 56.693 56.693" height="56.693px"  version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="white" d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/></svg>
                     </div>
                     <div class="social-text">
                         <p class="social-name">FaceBook</p>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="social-container">
                     <div class="social-image">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
                 <path fill="white" d="M17.7,25.7c0-0.3,0-0.5-0.1-0.8c-0.1-0.2-0.1-0.5-0.2-0.7c-0.1-0.2-0.2-0.4-0.3-0.7c-0.2-0.2-0.3-0.4-0.4-0.6
                     c-0.1-0.2-0.3-0.3-0.5-0.6c-0.2-0.2-0.4-0.4-0.5-0.5c-0.1-0.1-0.3-0.3-0.6-0.5c-0.3-0.2-0.5-0.4-0.6-0.4s-0.3-0.2-0.6-0.4
@@ -178,7 +178,7 @@
             <h3>New Members</h3>
             <div class="members-all">
                 <div class="members-container">
-                    <img src="images/member-1.jpg"   class="profile-image">
+                    <img src="images/member-1.jpg"   class="profile-image" alt="profile picture">
                     <div class="members-text">
                         <p>Victoria Chambers</p>
                         <a href="#">victoria.chambers80@example.com</a>
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="members-container">
-                    <img src="images/member-2.jpg"   class="profile-image">
+                    <img src="images/member-2.jpg" class="profile-image" alt="profile picture">
                     <div class="members-text">
                         <p>Dale Byrd</p>
                         <a href="#">dale.byrd520@example.com</a>
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class="members-container">
-                    <img src="images/member-3.jpg"   class="profile-image">
+                    <img src="images/member-3.jpg" class="profile-image" alt="profile picture">
                     <div class="members-text">
                         <p>Dawn Wood</p>
                         <a href="#">dawn.wood16@example.com</a>
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="members-container">
-                    <img src="images/member-4.jpg"   class="profile-image">
+                    <img src="images/member-4.jpg" class="profile-image" alt="profile picture">
                     <div class="members-text">
                         <p>Dan Oliver</p>
                         <a href="#">dan.oliver82@example.com</a>
@@ -219,7 +219,7 @@
             <h3>Recent Activity</h3>
 
             <div class="activity-container">
-                <img src="images/member-1.jpg"   class="profile-image">
+                <img src="images/member-1.jpg" class="profile-image" alt="profile picture">
                 <div class="activity-text">
                     <p>Victoria Chambers commented on <a href="#" class="activity-link">AmaDeus' SEO Tips</a></p>
                     <p>4 hours ago</p>
@@ -228,7 +228,7 @@
             </div>
 
             <div class="activity-container">
-                <img src="images/member-2.jpg"   class="profile-image">
+                <img src="images/member-2.jpg" class="profile-image" alt="profile picture">
                 <div class="activity-text">
                     <p>Dale Byrd liked the post <a href="#" class="activity-link">FaceBook's Changes for 2021</a></p>
                     <p>5 hours ago</p>
@@ -237,7 +237,7 @@
             </div>
 
             <div class="activity-container">
-                <img src="images/member-3.jpg"   class="profile-image">
+                <img src="images/member-3.jpg" class="profile-image" alt="profile picture">
                 <div class="activity-text">
                     <p>Dawn Wood commented on the post <a href="#" class="activity-link">FaceBook's Changes for 2021</a></p>
                     <p>5 hours ago</p>
@@ -246,7 +246,7 @@
             </div>
 
             <div class="activity-container">
-                <img src="images/member-4.jpg"   class="profile-image">
+                <img src="images/member-4.jpg" class="profile-image" alt="profile picture">
                 <div class="activity-text">
                     <p>Dan Oliver posted <a href="#" class="activity-link">AmaDeus' SEO Tips</a></p>
                     <p>1 day ago</p>
@@ -268,7 +268,7 @@
                     <option value="Tashan Duncan">
                     <option value="Victoria Chambers">
                 </datalist>
-                <textarea placeholder="Message for user" class="form-area"id= "messageField"></textarea>
+                <textarea placeholder="Message for user" class="form-area" id= "messageField"></textarea>
                 <button class="button-primary" id="send">Send</button>
             </form>
         </section>
