remove name in small screens, 320px now responsive!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="name">
                 <img src="./images/0.jpg" alt="profile image" class="profile-image">
-                <h3>Tashan Duncan</h3>
+                <h3 class="name-header">Tashan Duncan</h3>
             </div>
         </div>
     </header>
