--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="user">
             <div class="notification-bell">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 -2 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+                viewBox="0 -2 32 32" xml:space="preserve">
                     <g id="_x36__6_">
                         <g>
                             <path class="st0" d="M24,18v-8c0-5.5-4.5-10-10-10S4,4.5,4,10v8l-4,8h9.1c0.5,2.3,2.5,4,4.9,4s4.4-1.7,4.9-4H28L24,18z M14,28
@@ -26,6 +26,12 @@
                     </g>
                     <circle id='circle' cx="20" cy="2" r="4"/>
                 </svg>
+                <div class="alert-tasks" id="tasks">
+                    <div class=alert-tasks-close id="close-tasks">x</div>
+                    <a href="#">Task 1</a>
+                    <a href="#">Task 2</a>
+                    <a href="#">Task 3</a>
+                    </div>
                 <div id="notifications"></div>
             </div>
             <div class="name">
@@ -66,12 +72,7 @@
         </div>
         <!-- alert banner -->
         <div class="alert" id="alert"><!-- JS will insert alert here --></div>
-        <div class="alert-tasks" id="tasks">
-            <div class=alert-tasks-close id="close-tasks">x</div>
-            <a href="#">Task 1</a>
-            <a href="#">Task 2</a>
-            <a href="#">Task 3</a>
-            </div>
+
 
 
         <!-- line graph charts -->
