add event to remove circle and hover on notification bell after click

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1><span>Ama</span>Deus&trade;</h1>
         </div>
         <div class="user">
-            <div class="notification-bell">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <div class="notification-bell" >
+                <svg id="bell" class='ring' version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 -2 32 32" xml:space="preserve">
                     <g id="_x36__6_">
                         <g>
