--- a/index.html
+++ b/index.html
@@ -26,11 +26,33 @@
                     </g>
                     <circle id='circle' cx="20" cy="2" r="4"/>
                 </svg>
-                <div class="alert-tasks" id="tasks">
-                    <div class=alert-tasks-close id="close-tasks">x</div>
-                    <a href="#">Task 1</a>
-                    <a href="#">Task 2</a>
-                    <a href="#">Task 3</a>
+                <div class="alert-notifications" id="tasks">
+                    <div class=alert-notifications-close id="close-tasks"><span>x</span></span></div>
+                    <div class="alert-notifications-color">
+                        <div class="alert-notifications-container">
+                            <img src="images/member-1.jpg"   class="profile-image" alt="profile picture">
+                            <div>
+                                <p>Victoria Chambers liked your post</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="alert-notifications-color">
+                        <div class="alert-notifications-container">
+                            <img src="images/member-4.jpg"   class="profile-image" alt="profile picture">
+                            <div>
+                                <p>Dan Oliver commented on your post</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="alert-notifications-color">
+                        <div class="alert-notifications-container">
+                            <img src="images/member-3.jpg"   class="profile-image" alt="profile picture">
+                            <div>
+                                <p>Dawn Wood is now following you</p>
+                            </div>
+                        </div>
+                    </div>
+        
                     </div>
                 <div id="notifications"></div>
             </div>
