amend notifications code

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     </g>
                     <circle id='circle' cx="20" cy="2" r="4"/>
                 </svg>
-                <div class="alert-notifications" id="tasks">
-                    <div class=alert-notifications-close id="close-tasks"><span>x</span></span></div>
+                <div class="alert-notifications" id="notifications">
+                    <div class=alert-notifications-close id="close-notifications"><span>x</span></span></div>
                     <div class="alert-notifications-color">
                         <div class="alert-notifications-container">
                             <img src="images/member-1.jpg"   class="profile-image" alt="profile picture">
