--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@
                             </div>
                         </div>
                     </div>
-        
-                    </div>
-                <div id="notifications"></div>
+                </div>
             </div>
             <div class="name">
-                <img src="./images/0.jpg" alt="profile image" class="profile-image">
-                <h3 class="name-header">Tashan Duncan</h3>
+                <a href="http://www.tashanduncan.com" target="_blank"><img src="./images/0.jpg" alt="profile image" class="profile-image"></a>
+                <a href="http://www.tashanduncan.com" target="_blank"><h3 class="name-header">Tashan Duncan</h3></a>
             </div>
         </div>
     </header>
